# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
A workspace for gapic-showcase
"""
workspace(name = "gapic_showcase")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

##
# googleapis for the common protos
#
http_archive(
  name = "com_google_googleapis",
  strip_prefix = "googleapis-ec8c8a85a4429b52f53e11fcfaf0c30ced205356",
  urls = ["https://github.com/googleapis/googleapis/archive/ec8c8a85a4429b52f53e11fcfaf0c30ced205356.zip"],
  sha256 = "ccdf17db1d6a25ff0baae53dd934a088b7291650d48d5b7c75402dc1f9c8fa80"
)
load("@com_google_googleapis//:repository_rules.bzl", "switched_rules_by_language")
switched_rules_by_language(name = "com_google_googleapis_imports", grpc = True)

##
# protobuf for the protobuf protos
#
http_archive(
  name = "com_google_protobuf",
  sha256 = "994765da8d1dc359056d2ef27a4fbcfd46655456ebf4069ead619ba3061280cc",
  urls = ["https://github.com/protocolbuffers/protobuf/archive/v30.0.zip"],
  strip_prefix = "protobuf-30.0",
)
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

http_archive(
    name = "bazel_features",
    sha256 = "091d8b1e1f0bf1f7bd688b95007687e862cc489f8d9bc21c14be5fd032a8362f",
    strip_prefix = "bazel_features-1.26.0",
    url = "https://github.com/bazel-contrib/bazel_features/releases/download/v1.26.0/bazel_features-v1.26.0.tar.gz",
)
load("@bazel_features//:deps.bzl", "bazel_features_deps")
bazel_features_deps()

##
# rules_proto for the proto_library rule
#
http_archive(
    name = "rules_proto",
    sha256 = "14a225870ab4e91869652cfd69ef2028277fc1dc4910d65d353b62d6e0ae21f4",
    # Using a release candidate because the latest stable release is too old for
    # our needs, and we want to stay closer to the latest without pinning to a
    # specific commit.
    strip_prefix = "rules_proto-7.1.0",
    url = "https://github.com/bazelbuild/rules_proto/releases/download/7.1.0/rules_proto-7.1.0.tar.gz",
)

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies","rules_proto_toolchains")
rules_proto_dependencies()
rules_proto_toolchains()
